--- a/src/input.css
+++ b/src/input.css
@@ -43,9 +43,6 @@
   .header__nav li a {
     @apply text-black/80 hover:text-primary;
   }
-  .header__right a:first-child {
-    @apply hover:text-primary;
-  }
   .header__nav li {
     @apply items-center;
   }
@@ -104,7 +101,7 @@
     @apply bg-transparent border border-black text-black hover:bg-black/30 hover:text-black;
   }
   .btn.bg-clr2 {
-    @apply bg-transparent border border-white text-white hover:bg-black/15;
+    @apply bg-transparent border border-white text-white hover:bg-black/15 hover:text-black;
   }
   .instructions__steps {
     @apply flex gap-3 w-[26rem] lg:flex-col lg:justify-center lg:text-center lg:w-[23rem] mx-auto;
